--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-minimal
+
+title: Student Copies of Ancient Greek Mathematical Proofs
+
+description: Digital Humanities in the Ancient World Final Project
