--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 
-title: Student Copies of Ancient Greek Mathematical Proofs
+title: Education Resources for Ancient Mathematics
 
 description: Digital Humanities in the Ancient World Final Project
