--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 
-title: Education Resources for Ancient Mathematics
+title: Ancient Greek Mathematics Education Resources
 
 description: Digital Humanities in the Ancient World Final Project
